[package]
name = "hawkops"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for interacting with the StackHawk platform API."
license = "MIT"
repository = "https://github.com/aprilogic/hawkops"

[dependencies]
clap = { version = "4.3", features = ["derive"] } # For CLI argument parsing
reqwest = { version = "0.11", features = ["json", "blocking"] } # For HTTP requests
serde = { version = "1.0", features = ["derive"] } # For JSON serialization
dotenv = "0.15" # For reading environment variables
tokio = { version = "1.0", features = ["full"] } # Async runtime (needed for reqwest async)
