[package]
name = "hawkops"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for interacting with the StackHawk platform API."
license = "MIT"
repository = "https://github.com/aprilogic/hawkops"


[dependencies]
clap = { version = "4", features = ["derive"] } # For CLI argument parsing
reqwest = { version = "0", features = ["json", "blocking"] } # For HTTP requests
serde = { version = "1", features = ["derive"] } # For JSON serialization
dotenv = "0" # For reading environment variables
serde_json = "1"
chrono = "0"
base64 = "0" # Async runtime (needed for reqwest async)
config = "0"
dirs = "6"
